header nav links spacing fixes

--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,9 @@
 
 .header__nav-strip{
-  position: relative;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: none;
   height: 0;
   background-color: white;
@@ -76,6 +79,7 @@
   padding-right: 12px;
   padding-top: 16px;
   padding-bottom: 16px;
+  letter-spacing: 0.5px;
   text-transform: uppercase;
   transition: background-color 0.2s ease;
   color: theme-color(primary);
